--- a/mat_zofset.cfg
+++ b/mat_zofset.cfg
@@ -1,48 +1,52 @@
-[gcode_macro DETECT_MATERIAL]
-description: reads material from slicer
-
-gcode:
-    # read material from slicer, in none setup UNKNOWN material
-    {% set MATERIAL = params.MATERIAL|default("UNKNOWN")|upper %}
-    RESET_MATERIAL_OFFSET             # reset zofset
-    SET_MATERIAL TYPE={MATERIAL}      # set material, writes to terminal
-
+#####################################################################
+# MENEŽMENT Z-OFFSETA ZA MATERIJALE I PODLOGE
+#####################################################################
 
 [gcode_macro SET_MATERIAL]
-description: detect material
+description: Postavlja varijable materijala i podloge
 variable_material: "UNKNOWN"
+variable_sheet: "SMOOTH"
 variable_applied: False
 gcode:
-    # default is "UNKNOWN"
+    # Prihvatanje parametara sa navodnicima zbog razmaka u nazivima
     {% set m = params.TYPE|default("UNKNOWN")|upper %}
+    {% set s = params.SHEET|default("SMOOTH")|upper %}
+    
     SET_GCODE_VARIABLE MACRO=SET_MATERIAL VARIABLE=material VALUE='"{m}"'
+    SET_GCODE_VARIABLE MACRO=SET_MATERIAL VARIABLE=sheet VALUE='"{s}"'
     SET_GCODE_VARIABLE MACRO=SET_MATERIAL VARIABLE=applied VALUE=False
     
-    {% if m == "UNKNOWN" or m == "[FILAMENT_TYPE]" %}
-        RESPOND PREFIX="info" MSG="Material not recognised (UNKNOWN). Offset will be 0.00."
-    {% else %}
-        RESPOND PREFIX="info" MSG="Detected material: {m}"
-    {% endif %}
+    RESPOND PREFIX="info" MSG="Konfiguracija: Mat: {m}, Sheet: {s}"
 
-    
 [gcode_macro RESET_MATERIAL_OFFSET]
-description: Resets Z-offset to 0
+description: Resetuje G-kod offset na nulu
 gcode:
-    SET_GCODE_OFFSET Z=0.0 MOVE=1
+    SET_GCODE_OFFSET Z=0.0
     SET_GCODE_VARIABLE MACRO=SET_MATERIAL VARIABLE=applied VALUE=False
-    SET_GCODE_VARIABLE MACRO=SET_MATERIAL VARIABLE=material VALUE='"UNKNOWN"'
-    RESPOND PREFIX="info" MSG="Z-Offset reset to 0."
+    RESPOND PREFIX="info" MSG="Z-Offset resetovan na 0."
+
+[gcode_macro DETECT_MATERIAL]
+description: Poziva se iz PRINT_START sa parametrima iz slajsera
+gcode:
+    {% set MATERIAL = params.MATERIAL|default("UNKNOWN")|upper %}
+    {% set SHEET = params.SHEET|default("SMOOTH")|upper %}
+    
+    RESET_MATERIAL_OFFSET
+    # Prosledjivanje sa navodnicima je kljucno za nazive sa razmakom
+    SET_MATERIAL TYPE="{MATERIAL}" SHEET="{SHEET}"
 
 [gcode_macro APPLY_Z_OFFSET_MATERIAL]
-description: Zoffset correcton (call after the Bed Mesh)
+description: Sabira i primenjuje offset materijala i podloge
 gcode:
     {% set m = printer["gcode_macro SET_MATERIAL"].material %}
+    {% set s = printer["gcode_macro SET_MATERIAL"].sheet %}
     {% set is_applied = printer["gcode_macro SET_MATERIAL"].applied %}
 
     {% if is_applied %}
-        RESPOND PREFIX="warn" MSG="Z-offset is already applied, skipping."
+        RESPOND PREFIX="warn" MSG="Z-offset je vec primenjen, preskacem."
     {% else %}
-        {% set offsets = {
+        # 1. TABELA ZA MATERIJALE
+        {% set mat_offsets = {
             'PLA': -0.035,
             'PETG': -0.020,
             'ABS': 0.010,
@@ -50,14 +54,23 @@ gcode:
             'TPU': 0.020
         } %}
 
-        {% set z = offsets[m] if m in offsets else 0.00 %}
+        # 2. TABELA ZA PODLOGE (Prilagodjeno OrcaSliceru)
+        # Ovde unosis korekciju za svaku plocu posebno
+        {% set sheet_offsets = {
+            'HIGH TEMP PLATE': 0.000,
+            'TEXTURED PEI PLATE': -0.015,
+            'SMOOTH PEI PLATE': 0.000,
+            'SMOOTH': 0.000
+        } %}
 
-        SET_GCODE_OFFSET Z_ADJUST={z} MOVE=1
+        # Izracunavanje
+        {% set m_z = mat_offsets[m] if m in mat_offsets else 0.00 %}
+        {% set s_z = sheet_offsets[s] if s in sheet_offsets else 0.00 %}
+        {% set final_z = m_z + s_z %}
+
+        # Primena
+        SET_GCODE_OFFSET Z_ADJUST={final_z} MOVE=1
         SET_GCODE_VARIABLE MACRO=SET_MATERIAL VARIABLE=applied VALUE=True
         
-        {% if z != 0.00 %}
-            RESPOND PREFIX="info" MSG="Applied: Correction for {m} is {z} mm"
-        {% else %}
-            RESPOND PREFIX="info" MSG="Remains value (0.00) for {m}"
-        {% endif %}
+        RESPOND PREFIX="info" MSG="Primenjen totalni offset: {final_z}mm (Mat: {m_z} + Sheet: {s_z})"
     {% endif %}
